--- a/src/Wizardry/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Wizardry/UserBundle/Resources/views/Security/login.html.twig
@@ -11,7 +11,7 @@
                 <span aria-hidden="true">&times;</span>
                 <span class="sr-only">Close</span>
             </button>
-            <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+            <div>{{ error|trans }}</div>
         </div>
     {% endif %}
 
