--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -10,6 +10,7 @@
 </head>
 <body>
 <div id="header" class="container">
+    <div class="jumbotrone"></div>
     <div class="row">
         <div class="col-lg-6">
             <div class="row">
