--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -13,7 +13,8 @@
             <th>Сет</th>
             <th>Блок</th>
         </tr>
-        </thead>
+        </thead
+                >
         <tbody>
 
         </tbody>
