--- a/src/Wizardry/MainBundle/Resources/views/Block/index.html.twig
+++ b/src/Wizardry/MainBundle/Resources/views/Block/index.html.twig
@@ -2,25 +2,74 @@
 
 {% block stylesheets %}
     {{ parent() }}
-    <link rel="stylesheet" href="{{ asset('bundles/wizardrymain/css/set.css') }}" type="text/css" media="all">
+    <link rel="stylesheet" href="{{ asset('bundles/wizardrymain/css/block.css') }}" type="text/css" media="all">
 {% endblock %}
 
 
 {% block content %}
-<table class="records_list table table-bordered">
-    <thead>
-    <tr>
-        <th>ID</th>
-        <th>Сет</th>
 
-    </tr>
-    </thead>
-    <tbody>
-    {% for entity in sets %}
-        <tr class="{{ cycle(["even", "odd"], loop.index) }}">
-            <td>{{ entity.id }}</td>
-            <td><a href="{{ path('app_set_show', { 'id': entity.id }) }}">{{ entity.name }}</a></td>
-        </tr>
-    {% endfor %}
+    <!-- Carousel
+    ================================================== -->
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="item active">
+                <img src="{{ asset('../../assets/img/EN_Colors01_intro_InlineR_A.jpg') }}" alt="Learn">
+                <div class="container">
+                    <div class="carousel-caption">
+                        <h1>ABOUT THE GAME</h1>
+                        <p>In Magic: The Gathering, you are counted among the elite spellcasters of the Multiverse—the Planeswalkers. Your deck of cards represents your weapons, containing the spells you know and the creatures you can summon to fight for you.</p>
+                        <p><a class="btn btn-lg btn-primary" href="http://magic.wizards.com/en/game-info/gameplay/about-the-game" target="_blank" role="button">Learn</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="{{ asset('../../assets/img/EN_Deckbuilding_InlineR_A.jpg') }}" alt="Start">
+                <div class="container">
+                    <div class="carousel-caption">
+                        <h1>YOU WIELD UNIMAGINABLE POWER</h1>
+                        <p>As a Planeswalker, you are a mage with the ability to travel between the planes of the Multiverse, cast powerful spells, and summon armies of creatures to your aid.</p>
+                        <p><a class="btn btn-lg btn-primary" href="http://magic.wizards.com/en/new-to-magic" target="_blank" role="button">Start</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="{{ asset('../../assets/img/EN_CardSetArchive_inlineR_A_1.jpg') }}" alt="Play">
+                <div class="container">
+                    <div class="carousel-caption">
+                        <h1>PLAY MAGIC ONLINE</h1>
+                        <p>Magic Online allows you to build your collection online and play against real players whenever you want. Available for North American PC users only.</p>
+                        <p><a class="btn btn-lg btn-primary" href="http://magic.wizards.com/en/game-info/products/magic-online" target="_blank" role="button">Play</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+    </div><!-- /.carousel -->
+
+
+
+    <!-- Marketing messaging and featurettes
+    ================================================== -->
+    <!-- Wrap the rest of the page in another container to center all the content. -->
+
+    <div class="container marketing">
+        <!-- Three columns of text below the carousel -->
+        <div class="row">
+            {% for doc in blocks %}
+                <div class="col-lg-4">
+
+                    <h2>{{ doc.name }}</h2>
+                     <p><a class="btn btn-default" href="{{ path('app_block_show', { 'id': doc.id }) }}" role="button">View block &raquo;</a></p>
+                </div><!-- /.col-lg-4 -->
+            {% endfor %}
+        </div><!-- /.row -->
+
 
 {% endblock %}
