--- a/src/Wizardry/MainBundle/Resources/views/Block/block.html.twig
+++ b/src/Wizardry/MainBundle/Resources/views/Block/block.html.twig
@@ -7,20 +7,21 @@
 
 
 {% block content %}
-<table class="records_list table table-bordered">
-    <thead>
-    <tr>
-        <th>ID</th>
-        <th>Сет</th>
+    <!-- Marketing messaging and featurettes
+    ================================================== -->
+    <!-- Wrap the rest of the page in another container to center all the content. -->
 
-    </tr>
-    </thead>
-    <tbody>
-    {% for entity in set.cardcontain %}
-        <tr class="{{ cycle(["even", "odd"], loop.index) }}">
-            <td>{{ entity.id }}</td>
-            <td><a href="{{ path('app_card_show', { 'id': entity.id }) }}">{{ entity.name }}</a></td>
-        </tr>
-    {% endfor %}
+    <div class="container marketing">
 
-{% endblock %}
+        <!-- Three columns of text below the carousel -->
+        <div class="row" style="padding-top: 150px">
+            {% for doc in block.setcontain %}
+                <div class="col-lg-4">
+                    <h2>{{ doc.name }}</h2>
+                    <p>short name: {{ doc.shortname }}</p>
+                    <p><a class="btn btn-default" href="{{ path('app_set_show', { 'id': doc.id }) }}" role="button">View set &raquo;</a></p>
+                </div><!-- /.col-lg-4 -->
+            {% endfor %}
+        </div><!-- /.row -->
+
+        {% endblock %}
