--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -41,9 +41,11 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Wizardry project</a>
+
                 </div>
                 <div class="navbar-collapse collapse">
+                    <a  href="/"> <img src="{{ asset('./assets/img/logo-magic.png') }}" alt="Logo" width="14%"></a>
+                    <span> Wizardry project</span>
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="/">Home</a></li>
                         <li><a href="#about">About</a></li>
