new page templates & action

--- a/src/Wizardry/MainBundle/Resources/views/Block/index.html.twig
+++ b/src/Wizardry/MainBundle/Resources/views/Block/index.html.twig
@@ -24,7 +24,7 @@
                     <div class="carousel-caption">
                         <h1>ABOUT THE GAME</h1>
                         <p>In Magic: The Gathering, you are counted among the elite spellcasters of the Multiverse—the Planeswalkers. Your deck of cards represents your weapons, containing the spells you know and the creatures you can summon to fight for you.</p>
-                        <p><a class="btn btn-lg btn-primary" href="http://magic.wizards.com/en/game-info/gameplay/about-the-game" target="_blank" role="button">Learn</a></p>
+                        <p><a class="btn btn-lg btn-warning" href="http://magic.wizards.com/en/game-info/gameplay/about-the-game" target="_blank" role="button">Learn</a></p>
                     </div>
                 </div>
             </div>
@@ -34,7 +34,7 @@
                     <div class="carousel-caption">
                         <h1>YOU WIELD UNIMAGINABLE POWER</h1>
                         <p>As a Planeswalker, you are a mage with the ability to travel between the planes of the Multiverse, cast powerful spells, and summon armies of creatures to your aid.</p>
-                        <p><a class="btn btn-lg btn-primary" href="http://magic.wizards.com/en/new-to-magic" target="_blank" role="button">Start</a></p>
+                        <p><a class="btn btn-lg btn-warning" href="http://magic.wizards.com/en/new-to-magic" target="_blank" role="button">Start</a></p>
                     </div>
                 </div>
             </div>
@@ -44,7 +44,7 @@
                     <div class="carousel-caption">
                         <h1>PLAY MAGIC ONLINE</h1>
                         <p>Magic Online allows you to build your collection online and play against real players whenever you want. Available for North American PC users only.</p>
-                        <p><a class="btn btn-lg btn-primary" href="http://magic.wizards.com/en/game-info/products/magic-online" target="_blank" role="button">Play</a></p>
+                        <p><a class="btn btn-lg btn-warning" href="http://magic.wizards.com/en/game-info/products/magic-online" target="_blank" role="button">Play</a></p>
                     </div>
                 </div>
             </div>
