fix all templates and add photo

--- a/src/Wizardry/MainBundle/Resources/views/Block/index.html.twig
+++ b/src/Wizardry/MainBundle/Resources/views/Block/index.html.twig
@@ -19,22 +19,22 @@
         </ol>
         <div class="carousel-inner">
             <div class="item active">
-                <img src="{{ asset('../../assets/img/EN_Colors01_intro_InlineR_A.jpg') }}" alt="Learn">
+                <img src="{{ asset('../../assets/img/EN_Colors01_intro_InlineR_A.jpg') }}" alt="About">
                 <div class="container">
                     <div class="carousel-caption">
                         <h1>ABOUT THE GAME</h1>
                         <p>In Magic: The Gathering, you are counted among the elite spellcasters of the Multiverse—the Planeswalkers. Your deck of cards represents your weapons, containing the spells you know and the creatures you can summon to fight for you.</p>
-                        <p><a class="btn btn-lg btn-warning" href="http://magic.wizards.com/en/game-info/gameplay/about-the-game" target="_blank" role="button">Learn</a></p>
+                        <p><a class="btn btn-lg btn-warning" href="/about" role="button" >Read</a></p>
                     </div>
                 </div>
             </div>
             <div class="item">
-                <img src="{{ asset('../../assets/img/EN_Deckbuilding_InlineR_A.jpg') }}" alt="Start">
+                <img src="{{ asset('../../assets/img/EN_Deckbuilding_InlineR_A.jpg') }}" alt="Rules">
                 <div class="container">
                     <div class="carousel-caption">
-                        <h1>YOU WIELD UNIMAGINABLE POWER</h1>
+                        <h1>COMPREHENSIVE RULES</h1>
                         <p>As a Planeswalker, you are a mage with the ability to travel between the planes of the Multiverse, cast powerful spells, and summon armies of creatures to your aid.</p>
-                        <p><a class="btn btn-lg btn-warning" href="http://magic.wizards.com/en/new-to-magic" target="_blank" role="button">Start</a></p>
+                        <p><a class="btn btn-lg btn-warning" href="/rules" role="button" style="z-index: 99">Start</a></p>
                     </div>
                 </div>
             </div>
@@ -43,8 +43,8 @@
                 <div class="container">
                     <div class="carousel-caption">
                         <h1>PLAY MAGIC ONLINE</h1>
-                        <p>Magic Online allows you to build your collection online and play against real players whenever you want. Available for North American PC users only.</p>
-                        <p><a class="btn btn-lg btn-warning" href="http://magic.wizards.com/en/game-info/products/magic-online" target="_blank" role="button">Play</a></p>
+                        <p>A comprehensive document outlining each facet of the rules became necessary. This document is known as Magic’s Comprehensive Rulebook. It’s meant to be consulted when specific rules questions come into play and neither the tournament’s organizers nor judges have the answer.</p>
+                        <p><a class="btn btn-lg btn-warning" href="http://magic.wizards.com/en/game-info/products/magic-online" target="_blank" role="button"  style="z-index: 99">Play</a></p>
                     </div>
                 </div>
             </div>
