--- a/src/Wizardry/MainBundle/Resources/views/Card/card.html.twig
+++ b/src/Wizardry/MainBundle/Resources/views/Card/card.html.twig
@@ -7,10 +7,25 @@
 
 
 {% block content %}
-    <div class="container marketing">
-    <hr class="featurette-divider">
 
-    <div class="row featurette">
+
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+
+    <div class="carousel-inner">
+        <div class="item active">
+            <img src="{{ asset('../../assets/img/EN_CardSetArchive_Header_1.jpg') }}" alt="About">
+            <div class="container">
+                <div class="carousel-caption">
+                    <h1>CARD INFORMATION</h1>
+                </div>
+            </div>
+        </div>
+
+    </div><!-- /.carousel -->
+
+    <div class="container marketing">
+
+    <div class="row featurette" style="padding-top: 40px">
         <div class="col-md-5">
             <img class="featurette-image img-responsive" data-src="holder.js/312x445/auto" alt="Generic placeholder image">
         </div>
