--- a/src/Wizardry/MainBundle/Resources/views/Page/about.html.twig
+++ b/src/Wizardry/MainBundle/Resources/views/Page/about.html.twig
@@ -8,9 +8,25 @@
 
 {% block content %}
 
-<div class="container marketing">
+    <!-- Carousel
+     ================================================== -->
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
-    <div class="panel-separator" style="padding-top: 150px"></div>
+        <div class="carousel-inner">
+            <div class="item active">
+                <img src="{{ asset('../../assets/img/EN_AboutTheGame_Header_12.jpg') }}" alt="About">
+                <div class="container">
+                    <div class="carousel-caption">
+                        <h1>ABOUT THE GAME</h1>
+                    </div>
+                </div>
+            </div>
+
+    </div><!-- /.carousel -->
+
+        <div class="container marketing">
+
+    <div class="panel-separator" style="padding-top: 40px"></div>
 
 
     <!-- content type wiz-content-block-type-a -->
