--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -29,26 +29,18 @@
 <!-- NAVBAR
 ================================================== -->
 <body>
-<div class="navbar-wrapper">
+<div class="navbar-wrapper" >
     <div class="container">
 
-        <div class="navbar navbar-inverse navbar-static-top" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
+        <div class="navbar navbar-inverse" role="navigation">
+            <div class="container" >
 
-                </div>
-                <div class="navbar-collapse collapse">
+                <div class="navbar-collapse collapse" >
                     <a  href="/"> <img src="{{ asset('./assets/img/logo-magic.png') }}" alt="Logo" width="14%"></a>
                     <span> Wizardry project</span>
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="/">Home</a></li>
-                        <li><a href="/about">About</a></li>
+                        <li><a href="/about" >About</a></li>
                         <li><a href="/rules">Rules</a></li>
                         <!--<li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
