--- a/src/Wizardry/MainBundle/Resources/views/Block/block.html.twig
+++ b/src/Wizardry/MainBundle/Resources/views/Block/block.html.twig
@@ -11,10 +11,24 @@
     ================================================== -->
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+
+    <div class="carousel-inner">
+        <div class="item active">
+            <img src="{{ asset('../../assets/img/EN_C14_InlineR_A.jpg') }}" alt="About">
+            <div class="container">
+                <div class="carousel-caption">
+                    <h1>SET LIST</h1>
+                </div>
+            </div>
+        </div>
+
+    </div><!-- /.carousel -->
+
     <div class="container marketing">
 
         <!-- Three columns of text below the carousel -->
-        <div class="row" style="padding-top: 150px">
+        <div class="row" style="padding-top: 40px">
             {% for doc in block.setcontain %}
                 <div class="col-lg-4">
                     <h2>{{ doc.name }}</h2>
