--- a/src/Wizardry/MainBundle/Resources/views/Page/rules.html.twig
+++ b/src/Wizardry/MainBundle/Resources/views/Page/rules.html.twig
@@ -8,9 +8,25 @@
 
 {% block content %}
 
-<div class="container marketing">
+<!-- Carousel
+ ================================================== -->
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
 
-    <div class="panel-separator"></div>
+    <div class="carousel-inner">
+        <div class="item active">
+            <img src="{{ asset('../../assets/img/EN_DTK_Header.jpg') }}" alt="Rules">
+            <div class="container">
+                <div class="carousel-caption">
+                    <h1>COMPREHENSIVE RULES</h1>
+                </div>
+            </div>
+        </div>
+
+    </div><!-- /.carousel -->
+
+    <div class="container marketing">
+
+    <div class="panel-separator" style="padding-top: 40px"></div>
 
     <!-- wiz_bean_content_html_block -->
 
