add new page & fix menu

--- a/src/Wizardry/MainBundle/Resources/views/Block/index.html.twig
+++ b/src/Wizardry/MainBundle/Resources/views/Block/index.html.twig
@@ -33,7 +33,7 @@
                 <div class="container">
                     <div class="carousel-caption">
                         <h1>COMPREHENSIVE RULES</h1>
-                        <p>As a Planeswalker, you are a mage with the ability to travel between the planes of the Multiverse, cast powerful spells, and summon armies of creatures to your aid.</p>
+                        <p>A comprehensive document outlining each facet of the rules became necessary. This document is known as Magic’s Comprehensive Rulebook. It’s meant to be consulted when specific rules questions come into play and neither the tournament’s organizers nor judges have the answer.</p>
                         <p><a class="btn btn-lg btn-warning" href="/rules" role="button" style="z-index: 99">Start</a></p>
                     </div>
                 </div>
@@ -42,9 +42,9 @@
                 <img src="{{ asset('../../assets/img/EN_CardSetArchive_inlineR_A_1.jpg') }}" alt="Play">
                 <div class="container">
                     <div class="carousel-caption">
-                        <h1>PLAY MAGIC ONLINE</h1>
-                        <p>A comprehensive document outlining each facet of the rules became necessary. This document is known as Magic’s Comprehensive Rulebook. It’s meant to be consulted when specific rules questions come into play and neither the tournament’s organizers nor judges have the answer.</p>
-                        <p><a class="btn btn-lg btn-warning" href="http://magic.wizards.com/en/game-info/products/magic-online" target="_blank" role="button"  style="z-index: 99">Play</a></p>
+                        <h1>HOW TO PLAY</h1>
+                        <p>Read this game info and play with your friends around your kitchen table, or join your local Magic community.</p>
+                        <p><a class="btn btn-lg btn-warning" href="/gameplay" role="button"  style="z-index: 99">Play</a></p>
                     </div>
                 </div>
             </div>
