--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -42,6 +42,7 @@
                         <li class="active"><a href="/">Home</a></li>
                         <li><a href="/about" >About</a></li>
                         <li><a href="/rules">Rules</a></li>
+                        <li><a href="/gameplay">How to play</a></li>
                         <!--<li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
                             <ul class="dropdown-menu">
