--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -59,7 +59,7 @@
 
                         <div class="navbar-form navbar-right" style="margin-right: 10px;">
                             <p>
-                                <a class="btn btn-success" href="/login" role="button">Sign in</a>
+                                <a class="btn btn-success" href="/admin" role="button">Sign in</a>
                                 <a class="btn btn-primary" href="/register" role="button">Sign up</a>
                             </p>
                         </div>
