add link for github in template

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -78,7 +78,7 @@
     <!-- FOOTER -->
     <footer style="padding-top: 50px">
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2015, GeekHub &middot;  <a href="../api/doc">API</a> &middot; </p>
+        <p>&copy; 2015, GeekHub &middot;  <a href="../api/doc">API</a> &middot; <a href="https://github.com/geekhub-php/wizardry">GitHub</a> &middot; </p>
     </footer>
 
 </div><!-- /.container -->
